--- a/student-application/src/main/resources/application-qa.properties
+++ b/student-application/src/main/resources/application-qa.properties
@@ -1,9 +1,9 @@
-server.port=9999
+server.port=9993
 
-spring.application.name=student_prasad
+spring.application.name=student_prasad_qa
 #sql details
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/student_prasad
+spring.datasource.url=jdbc:mysql://localhost:3306/student_prasad_qa
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
@@ -11,5 +11,3 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialec
 ##Hibernate ddl auto
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
-spring.profiles.active=dev
